--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to WWOOF Japan</title>
+    <link rel="stylesheet" href="/css/main.css"
   </head>
   <body>
   <header>
@@ -11,10 +12,10 @@
   </header>
   <nav></nav>
   <main>
-    
+
   </main>
   <footer>
-    <p>&copy; 2020 WWOOF Japan LLP. All Rights Reserved</p>
+    <!--p>&copy; 2020 WWOOF Japan LLP. All Rights Reserved</p-->
   </footer>
   </body>
 </html>
