Add ideas for basic structure

--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
   </head>
   <body>
   <header>
-
+   <!-- logo and h1? -->
   </header>
-  <nav></nav>
-  <main>
 
+  <nav>
+    <!-- hidden on mobile? -->
+  </nav>
+
+  <main>
+    <!-- main cards or sections -->
   </main>
+
   <footer>
-    <!--p>&copy; 2020 WWOOF Japan LLP. All Rights Reserved</p-->
+    <!-- Copyright, privacy policy, social media links, contact info
+    p>&copy; 2020 WWOOF Japan LLP. All Rights Reserved</p
+  -->
   </footer>
   </body>
 </html>
