--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to WWOOF Japan</title>
     <link rel="stylesheet" href="/css/main.css">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+         <script src="/js/main.js"></script> 
   </head>
   <body>
   <header>
