--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to WWOOF Japan</title>
     <link rel="stylesheet" href="/css/main.css">
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-         <script src="/js/main.js"></script> 
+         <script src="/js/main.js"></script>
   </head>
   <body>
   <header>
@@ -19,6 +19,7 @@
 
   <main>
     <!-- main cards or sections -->
+    <h1>Welcome to <abbr title="Worldwide Opportunities on Organic Farms">WWOOF</abbr> Japan!</h1>
   </main>
 
   <footer>
