Add logo placeholder

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   </head>
   <body>
   <header>
-   <!-- logo and h1? -->
+   <!-- wwoof logo
+    <figure>
+     <img src="assets/woofjplogo.png" alt="WWOOF Japan logo">
+     <igcaption>WWOOF Japan logo</figcaption>
+   </figure--> 
   </header>
 
   <nav>
-    <!-- hidden on mobile? -->
+    <!-- About, donate, sign-up, find your farm -->
   </nav>
 
   <main>
