--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=yes">
     <title>Welcome to WWOOF Japan</title>
     <link rel="stylesheet" href="/css/main.css">
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -14,7 +14,7 @@
     <figure>
      <img src="assets/woofjplogo.png" alt="WWOOF Japan logo">
      <igcaption>WWOOF Japan logo</figcaption>
-   </figure--> 
+   </figure-->
   </header>
 
   <nav>
