--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=yes">
     <title>Welcome to WWOOF Japan</title>
     <link rel="stylesheet" href="/css/main.css">
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-         <script src="/js/main.js"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/rqy1yjs.css">
+    <!-- favicon -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
   <header>
    <!-- wwoof logo
     <figure>
      <img src="assets/woofjplogo.png" alt="WWOOF Japan logo">
-     <igcaption>WWOOF Japan logo</figcaption>
+     <figcaption>WWOOF Japan logo</figcaption>
    </figure-->
   </header>
 
