--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/rqy1yjs.css">
     <!-- favicon -->
+    <link rel="icon" type="image/png" href="/assets/wooflogo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/js/main.js"></script>
   </head>
