Fix external stylesheet links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=yes">
     <title>Welcome to WWOOF Japan</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/rqy1yjs.css">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="/assets/wwooflogo.png">
+    <link rel="icon" type="image/png" href="assets/wwooflogo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
   <header>
