Add basic color to homepage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <main>
     <!-- main cards or sections -->
     <h1>Welcome to <abbr title="Worldwide Opportunities on Organic Farms">WWOOF</abbr> Japan!</h1>
+    <h2>Worldwide Opportunities on Organic Farms</h2>
   </main>
 
   <footer>
