Comment out static text

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   </nav>
 
   <main>
-    <!-- main cards or sections -->
+    <!-- main cards or sections
     <h1>Welcome to <abbr title="Worldwide Opportunities on Organic Farms">WWOOF</abbr> Japan!</h1>
     <h2>What is WWOOF?</h2>
     <p>Hosts give WWOOFers accommodation and meals, in return for the WWOOFer helping the Host with what the Host does at his or her place.
  The nature of the support you give will be various, depending on the Host. For example, weeding, seeding, harvesting, watering, chopping wood, feeding animals, shipping vegetables, processing food, cleaning, washing the dishes, helping children study, building houses, painting, computer support, taking dogs for a walk, shoveling snow, helping at event, making handicrafts, etc.  Hosts also give WWOOFers various knowledge and experience relating to these and other activities as result living with and helping them. Also, Hosts will introduce WWOOFers to the beauty of their local area. This and more is outlined in the Hosts' Preview.
  There is no payment of money between Host and WWOOFer. WWOOFers need to pay just the yearly WWOOF membership fee, ¥5,500 (about $50 USD). WWOOFing with sending an online application form. </p>
-
+  -->
   </main>
 
   <footer>
