Add link to Velocity.js CDN

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" href="assets/wwooflogo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/velocity-animate@2.0/velocity.min.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
